# a-virtual-solar-system

./: CMakeLists.txt  README.md  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  main.cpp  solarSystem.cpp
include/: particle.hpp  randomParticleSystem.hpp  solarSystem.hpp
src/: CMakeLists.txt  particle.cpp  randomParticleSystem.cpp  solarSystem.cpp
test/: CMakeLists.txt  test.cpp
